syntax = "proto3";
package kratos.api;

option go_package = "app/admin/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Trace trace = 1;
  Server server = 2;
  Data data = 3;
  Auth auth = 4;
}

message Trace {
  string endpoint = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message Mqtt {
    string addr = 1;
  }
  message Kafka {
    repeated string addrs = 1;
  }
  message Websocket {
    string network = 1;
    string addr = 2;
    string path = 3;
    google.protobuf.Duration timeout = 4;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  Mqtt mqtt = 3;
  Kafka kafka = 4;
  Websocket websocket = 5;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Database database = 1;
  Redis redis = 2;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
    bool health_check = 3;
  }
  Consul consul = 1;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
}
